syntax = "proto3";

option go_package = "github.com/djeniusinvfest/inventora/auth/proto";

package proto;

service Authentication {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message HelloRequest {
}

message HelloResponse {
    string message = 1;
}

message RegisterRequest {
    string email = 1;
    string firstName = 2;
    string lastName = 3;
    string password = 4;
    bool agreeTos = 5;
}

message RegisterResponse {
    Result result = 1;
    string message = 2;
}

enum Result {
    SUCCESS = 0;
    INVALID_FIELDS = 1;
}